native/bridge/include/bubi_fm77av.h

/* 不透明ハンドル。実体は公開しない。 */
typedef struct bfm_session bfm_session;
typedef enum {
	BFM_OK = 0,
	BFM_ERR_INVALID_ARGUMENT = 1, /* 呼び出し側の誤り（NULL、範囲外など） */
	BFM_ERR_INVALID_STATE = 2,    /* 二重開始、停止中の操作など */
	BFM_ERR_QUEUE_FULL = 3,       /* コマンドキューが上限に達した */
	BFM_ERR_NO_EVENT = 4,         /* poll時にイベントがない */
	BFM_ERR_CORE_FAILED = 5,      /* Core thread内で異常が発生した */
	BFM_ERR_UNSUPPORTED = 6,      /* 型としては定義済みだが未実装 */
	BFM_ERR_INTERNAL = 7,         /* 境界で捕捉した想定外の例外 */
	/*
	 * rawイメージのサイズがFM7系の2D/2DDジオメトリのどちらとも一致しない、
	 * または変換形式（TD0/IMD/DSK/NFD/FDI）の変換後media_typeが2D/2DD以外
	 * だった（M3 FDD-03）。design.md 9.1「raw変換は容量だけで汎用geometry
	 * 表へフォールスルーさせない」を満たすための専用コード。
	 */
	BFM_ERR_UNSUPPORTED_GEOMETRY = 8,
	/*
	 * BFM_CMD_LOAD_STATE: 読込み対象ファイルの先頭4バイト（コアの
	 * STATE_VERSION、emu.cpp内`#define`）がブリッジの既知値と一致しない、
	 * またはファイルが読めない（M3 STA-02）。これより深いデバイス単位の
	 * 不一致では、コア内部のEMU::load_state_tmpが現在の実行状態へ
	 * ロールバックする。void APIからは結果が見えないため、ブリッジが
	 * ロード前に置いた目印で巻き戻しを検出し、同じくこのコードを返す
	 * （bubi_fm77av.cppのBFM_CMD_LOAD_STATE、design.md「状態保存（M3、
	 * STA-01/STA-02）の実装方式」参照）。いずれの場合も実行状態と
	 * 挿入中の媒体はロード前のまま変わらない。
	 */
	BFM_ERR_STATE_INCOMPATIBLE = 9
} bfm_result;
typedef enum {
	BFM_RESET_NORMAL = 0,
	BFM_RESET_SPECIAL = 1 /* BREAK付き特殊リセット */
} bfm_reset_kind;
typedef struct {
	uint32_t kind;    /* bfm_command_kind */
	int32_t reserved; /* 0を入れる。構造体の詰め物を明示する。 */
	int64_t arg0;
	int64_t arg1;
	/*
	 * ファイルパス等。呼び出し中だけ借用し、実装側が複製する。
	 * 関数から戻った後の寿命は呼び出し側が自由に決めてよい。
	 */
	const char* text;
} bfm_command;
typedef struct {
	uint32_t kind;       /* bfm_event_kind */
	int32_t code;        /* ERROR のとき bfm_result、COMMAND_COMPLETED のとき結果 */
	uint64_t command_id; /* COMMAND_COMPLETED のとき、対応するコマンドの連番 */
	int64_t arg0;        /* LIFECYCLE_CHANGED のとき bfm_state、
	                      * LED_CHANGED のとき0x1=INS/0x2=KANA/0x4=CAPSのビット合成、
	                      * MEDIA_CHANGED のときドライブ番号（0=FD1、1=FD2） */
	int64_t arg1;        /* MEDIA_CHANGED のとき1=挿入、0=排出 */
} bfm_event;
typedef struct {
	/*
	 * コアがアプリケーションデータを置く位置。ホストが必ず決める。
	 * 空文字やNULLは受け付けない。upstreamの既定に委ねると
	 * ~/CommonSourceCodeProject/ を作ってしまい design.md 11.3 と食い違う。
	 *
	 * upstreamの get_application_path() は初回呼出しで値を固定するため、
	 * この値はプロセス全体で1つに限る。2回目以降の bfm_create が違う値を
	 * 渡した場合は BFM_ERR_INVALID_STATE を返す。変更にはプロセス再起動が要る。
	 */
	const char* home_dir;

	/*
	 * 利用者が選んだROMディレクトリ。NULLまたは空なら結線しない。
	 *
	 * コアはROMを1つのディレクトリからしか読まないため、ブリッジが
	 * 作業ディレクトリを用意し、ここの各ファイルへシンボリックリンクを
	 * 張る。原本は複製せず元の位置に残す（design.md 16.1）。
	 * ROMの検証はホスト側の責務であり、ここでは行わない。
	 */
	const char* rom_dir;

	/* 起動時のブートモード（bfm_boot_mode）。既定は BFM_BOOT_BASIC。 */
	int32_t boot_mode;

	/* キュー上限。0なら既定値（コマンド64、イベント256）。 */
	uint32_t command_queue_capacity;
	uint32_t event_queue_capacity;

	/*
	 * オーディオバッファ（bfm_audio_latency）。既定は BFM_AUDIO_LATENCY_50MS
	 * （ゼロ初期化と一致）。範囲外の値は BFM_ERR_INVALID_ARGUMENT。
	 */
	int32_t audio_latency;
} bfm_create_options;
/* 確保側が bfm_destroy で解放する。out は成功時だけ書き換える。 */
BFM_API bfm_result bfm_create(const bfm_create_options* options, bfm_session** out);
/* NULL可。二重破棄以外は冪等。 */
BFM_API void bfm_destroy(bfm_session* session);
BFM_API bfm_result bfm_start(bfm_session* session);
/* 冪等。停止済みでも BFM_OK を返す。 */
BFM_API bfm_result bfm_stop(bfm_session* session);
/* 投入した連番を out_command_id へ返す。完了は同じIDのイベントで通知する。 */
BFM_API bfm_result bfm_reset(bfm_session* session, bfm_reset_kind kind,
                             uint64_t* out_command_id);
BFM_API bfm_result bfm_send_command(bfm_session* session, const bfm_command* command,
                                    uint64_t* out_command_id);
/* イベントが無ければ BFM_ERR_NO_EVENT を返す。out は呼び出し側の所有。 */
BFM_API bfm_result bfm_poll_event(bfm_session* session, bfm_event* out);
BFM_API int32_t bfm_get_state(bfm_session* session);
/*
 * コアが実際にROMを読み USERDIC.DAT を書くディレクトリを、終端NUL付きで
 * out へ書く。連結規則はupstreamの get_application_path() が決めるため、
 * ホスト側で組み立てず必ずここから得ること。
 * out_size が足りない場合は BFM_ERR_INVALID_ARGUMENT を返す。
 */
BFM_API bfm_result bfm_get_core_directory(bfm_session* session, char* out,
                                          uint32_t out_size);
/*
 * 映像（design.md 6、16.1「映像の受け渡しとmacOS Texture方式」）。
 *
 * コアのバッファは渡さない。解像度が変わるとコアが確保し直すため、
 * 渡したポインターがその瞬間に無効になる。ここで返すのはブリッジが
 * 所有する面であり、release するまで内容も大きさも変わらない。
 *
 * pixels は BGRA8888、上から下へ、幅×高さの連続領域である。
 * コアはアルファを書かないため、ブリッジが 0xff を埋めてある。
 * 埋めないと画面全体が背景と混ざる。
 */
typedef struct {
	const uint32_t* pixels;
	uint32_t width;
	uint32_t height;
	uint32_t reserved; /* 0。構造体の詰め物を明示する。 */
	uint64_t generation;
} bfm_video_frame;
/*
 * 最新の完成フレームを借りる。まだ1枚もなければ BFM_ERR_NO_EVENT を返す。
 * 借りたら必ず bfm_release_video_frame を同じ generation で呼ぶこと。
 * 返すまでその面は書き潰されない。
 *
 * どのスレッドから呼んでもよい。VMには触れない。
 * 呼び手を待たせないため、Core threadの複製が終わるのを待つことはない。
 */
BFM_API bfm_result bfm_acquire_video_frame(bfm_session* session,
                                           bfm_video_frame* out);
/* 借りた面を返す。未知の generation は黙って無視する。 */
BFM_API void bfm_release_video_frame(bfm_session* session, uint64_t generation);
/*
 * 最新の完成フレームの世代番号。まだ1枚もなければ0。
 * 借りずに「変わったかどうか」だけを知りたいときに使う。
 * 描画側はこれで変化を見てから転送すればよい（VID-07）。
 */
BFM_API uint64_t bfm_video_generation(bfm_session* session);
typedef struct {
	uint64_t frames_run;
	uint64_t commands_accepted;
	uint64_t commands_rejected; /* キュー飽和で拒否した数 */
	uint64_t events_dropped;    /* UI遅延で捨てた古いイベント数 */
	/*
	 * Core thread以外からVM操作境界へ入った回数。
	 * 正常動作では常に0でなければならない（development_plan.md 6 WP1
	 * 「Core threadだけがVMを操作することをテストする」）。
	 */
	uint64_t vm_access_violations;
	/* 公開したフレーム数と、書ける面が尽きて捨てたフレーム数。 */
	uint64_t frames_published;
	uint64_t frames_dropped;
	/*
	 * 音声（design.md 7、16.1）。audio_frames_producedはCore threadが
	 * vm->create_sound()で取り出したフレーム数の累計。
	 * audio_underrun_framesはbfm_read_audioが無音で埋めたフレーム数、
	 * audio_overrun_framesは読み手が追いつかず最古から捨てたフレーム数の
	 * 累計。どちらも常時0とは限らないが、再生が追いついていれば
	 * 増加が緩やかに収まる。
	 */
	uint64_t audio_frames_produced;
	uint64_t audio_underrun_frames;
	uint64_t audio_overrun_frames;
} bfm_stats;
BFM_API bfm_result bfm_get_stats(bfm_session* session, bfm_stats* out);
/*
 * FD1/FD2アクセス状態（design.md WP5「アクセス状態」）。
 * ビット0=FD1、ビット1=FD2、アクセス（モーターオン相当）中なら1。
 *
 * upstreamのMB8877::read_signal()自体が読むたびにフラグを消費する
 * read-and-clearであり、Core threadが毎フレーム蓄積した値を、
 * この関数を呼んだ側が読むたびに0へ戻す。BFM_EVENT_MEDIA_ACCESS_CHANGED
 * イベントは使わない（bubi_fm77av.hの当該コメントを参照）。
 * 消費者は1つに保つこと。複数箇所から呼ぶと取り合いになる。
 */
BFM_API bfm_result bfm_get_media_access(bfm_session* session, uint32_t* out_bits);
/*
 * D88のバンク情報（design.md 「D88 bank list」、M3 FDD-04）。
 *
 * upstream の EMU::open_floppy_disk() が挿入時に file_bank/bank_num を
 * 数え上げて emu->d88_file[drv] へ保持する。この関数は挿入・排出の
 * 完了後にその値を読むだけで、Core threadの実行を待たせない。
 * out_bank_num は総バンク数（単一ディスクのD88なら1）、out_cur_bank は
 * 現在開いているバンク番号（0始まり）。未挿入なら両方0を返す。
 */
BFM_API bfm_result bfm_get_fdd_bank_info(bfm_session* session, int32_t drive,
                                         int32_t* out_bank_num,
                                         int32_t* out_cur_bank);
/*
 * ドライブごとの書込み保護の実際値（M3 FDD-06）。0または1をout_valueへ
 * 書く。upstreamの DISK::open() はディスク単位のwrite_protectedを
 * 呼出しのたびにまずfalseへ戻してから、開いたD88ファイル自身の
 * ヘッダprotectバイトを見て必要ならtrueへ立て直す（vm/disk.cpp）。
 * つまり挿入直後は「そのファイル自身が持つ書込み保護の有無」を返す。
 * BFM_CMD_SET_FDD_WRITE_PROTECTで明示的に変更した場合はその値を返す。
 * 未挿入なら0を返す。
 */
BFM_API bfm_result bfm_get_fdd_write_protect(bfm_session* session, int32_t drive,
                                             int32_t* out_value);
/*
 * CMTの現在状態（design.md「D88 bank list」と同型の直接アクセサ、
 * specification.md CMT-05、M4）。message は終端NULを含めて必ず
 * NUL終端し、収まらない場合は切り詰める。position は0〜100（未挿入または
 * 再生用でなければ0、upstream DATAREC::get_tape_position()と同じ意味）。
 * 未挿入なら inserted/playing/recording はすべて0、message は"Stop"。
 *
 * message はupstreamと同じ書式（再生中は"Play (NN %)"、録音中は"Record"、
 * 停止中は再生用が"Stop (NN %)"・録音用が"Stop"）を、現在の走行位置から
 * ブリッジが作る。upstreamのDATAREC::get_message()をそのまま返すのは
 * 早送り・巻戻し中だけである。upstreamのmessageはテープを開き直しても
 * 初期化されず、stateにも含まれず、モーター始動直後も前の値のままのため、
 * そのままでは前のテープやロード前の値が見えるからである。
 * ステートロードで戻したテープは録音用かどうかをブリッジが判別できず、
 * 停止中は再生用の書式になる（録音用と知っているホストが表示側で扱う）。
 */
typedef struct {
	int32_t inserted;
	int32_t playing;
	int32_t recording;
	int32_t position;
	char message[128];
} bfm_cmt_status;
BFM_API bfm_result bfm_get_cmt_status(bfm_session* session, bfm_cmt_status* out);
/*
 * ジョイスティックの直接入力（design.md 8「固定長スナップショット領域」、
 * M3 INP-04）。どのスレッドからでも呼べる。index は 0=JS1、1=JS2
 * （それ以外は BFM_ERR_INVALID_ARGUMENT）。bits はビット0〜3が方向
 * （Up/Down/Left/Right）、ビット4〜5がボタン1・2、いずれも1が押下状態
 * （active-high、vm/fm7/joystick.cppの規約）。それ以外のビットは無視する
 * （下位6ビットへマスクする）。呼ぶたびに即座に複製を更新するだけで、
 * Core threadがフレームごとに最新値を読み出す（design.md 8）。
 */
BFM_API bfm_result bfm_set_joystick_state(bfm_session* session, int32_t index,
                                          uint32_t bits);
/*
 * 一時停止（ホスト側UIの都合によるポーズ）。どのスレッドからでも呼べる。
 * paused は0または1（それ以外は BFM_ERR_INVALID_ARGUMENT）。1の間、
 * Core threadは`vm->run()`を呼ばず、壁時計の1周期ごとにコマンドの取込み
 * だけを続ける（FDD挿入・状態保存などは一時停止中でも完了する）。ゲスト
 * 時間は進まず、音声は生成されないため再生側はアンダーランの無音埋めに
 * なる。Full Speedより優先する。呼ぶたびに即座に値を更新するだけで、
 * Core threadの起動前後どちらから呼んでも安全（値は次の起動にも残る）。
 */
BFM_API bfm_result bfm_set_paused(bfm_session* session, int32_t paused);
/*
 * 音声（design.md 7、16.1「音声はVMの駆動源にしない」）。
 *
 * コアのPCMをブリッジが所有する有界リングへ蓄え、ここから複製で渡す。
 * frame_capacity分を必ず埋めて返す。足りない分は無音で埋め、
 * bfm_stats.audio_underrun_framesを増やす。どのスレッドから呼んでもよい。
 * VMには触れない。
 */
BFM_API bfm_result bfm_read_audio(bfm_session* session, int16_t* out,
                                  uint32_t frame_capacity);
/*
 * bfm_read_audioと同じリングから、溜まっている分だけ最大frame_capacity分を
 * 読み、読んだフレーム数を*out_framesへ返す。無音で埋めず、
 * bfm_stats.audio_underrun_framesも増やさない。コアのPCMはaudio_latency分の
 * まとまりで届くため、再生側のバッファへ流し込む用途ではこちらを使う
 * （足りない分の扱いは再生側のバッファに任せる）。どのスレッドから
 * 呼んでもよい。VMには触れない。
 */
BFM_API bfm_result bfm_read_audio_available(bfm_session* session, int16_t* out,
                                            uint32_t frame_capacity,
                                            uint32_t* out_frames);
/*
 * 出力フォーマット（サンプルレート、チャネル数）。プロセス内で固定であり、
 * セッションの状態に関わらず得られる。
 */
BFM_API bfm_result bfm_get_audio_format(bfm_session* session,
                                        uint32_t* out_sample_rate,
                                        uint32_t* out_channels);